<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id = "@+id/ln_layout_title"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/register_title_form"
            android:textSize = "25sp" />
    </LinearLayout>
    <LinearLayout
        android:id = "@+id/ln_layout_name"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ln_layout_title">

        <TextView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:text = "@string/name_text"
            android:textSize = "20sp" />
        <EditText
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:id = "@+id/edit_text_name"
            android:focusable = "true"
            android:layout_marginEnd="20dp"
           />

    </LinearLayout>
    <LinearLayout
        android:id = "@+id/ln_layout_email"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln_layout_name">
        <TextView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:text = "@string/email_text"
            android:textSize = "20sp" />
        <EditText
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:id = "@+id/edit_text_email"
            android:focusable = "true"
            android:layout_marginEnd="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id = "@+id/ln_layout_number"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln_layout_email">
        <TextView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:text = "@string/number_text"
            android:textSize = "20sp" />
        <EditText
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:id = "@+id/edit_text_number"
            android:focusable = "true"
            android:layout_marginEnd="20dp"
            android:inputType="phone"
            />

    </LinearLayout>
    <LinearLayout
        android:id = "@+id/ln_layout_pass"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln_layout_number">

        <TextView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:text = "@string/password_text"
            android:textSize = "20sp" />

        <EditText
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:id = "@+id/edit_text_pass"
            android:focusable = "true"
            android:layout_marginEnd="20dp"
            android:inputType="textPassword"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln_layout_pass"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_text"
            android:id="@+id/btn_cancel"
            android:layout_marginEnd="10dp"
            />
        <Button
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:id="@+id/btn_signup"
            />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/loader_signup"
        style="?android:attr/progressBarStyle"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>