<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:background="@drawable/gradient_color"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.contacts.ContactsActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_above="@+id/bottom_navigation_contacts">

        <androidx.appcompat.widget.Toolbar
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbarTransparent"
            android:id="@+id/toolbar_new_contact"
            style="@style/AppTheme.Toolbar">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="@string/contacts_title"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:id="@+id/main_frame_layout"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/gradient_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="40dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/login_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="25dp"
                    android:textSize="30sp"
                    android:text="@string/add_contact_title"
                    android:textColor="@color/textColorInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:id = "@+id/edit_text_contact_name"
                    android:focusable = "true"
                    android:layout_marginTop = "0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/textColorInput"
                    android:hint="@string/name_hint"
                    android:inputType="text"
                    android:importantForAutofill="no" />

                <EditText
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:id = "@+id/edit_text_contact_email"
                    android:focusable = "true"
                    android:layout_marginTop = "0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/textColorInput"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no" />

                <EditText
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:id = "@+id/edit_text_contact_number"
                    android:focusable = "true"
                    android:layout_marginTop = "0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/textColorInput"
                    android:hint="@string/phone_hint"
                    android:inputType="phone"
                    android:importantForAutofill="no" />

                <androidx.appcompat.widget.AppCompatButton
                    android:gravity="center"
                    android:layout_gravity="center"
                    style="@style/ButtonLoginTheme"
                    android:padding="0dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/add_button"
                    android:id="@+id/btn_addContact"
                    />

                <ProgressBar
                    android:id="@+id/loader_add_contact"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    />

            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>

