<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".screens.home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_color"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:background="@color/toolbarTransparent"
            tools:ignore="MissingConstraints"
            android:id="@+id/toolbar_home"
            style="@style/AppTheme.Toolbar" />

        <Button
            android:textAllCaps="false"
            android:background="@drawable/rounded_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_alert_text"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="20dp"
            android:id="@+id/btn_alert"
            android:padding="15dp"
            android:drawableTop="@mipmap/alert_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_alert_text"
            android:id="@+id/btn_cancel_alert"
            app:layout_constraintTop_toBottomOf="@+id/btn_alert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_alert_text"
            android:id="@+id/btn_finish_alert"
            app:layout_constraintTop_toBottomOf="@+id/btn_cancel_alert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <ProgressBar
            android:id="@+id/loader_home"
            style="?android:attr/progressBarStyle"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_navigation_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            android:theme="@style/bottomNavViewTheme"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        app:itemTextColor="@color/black"
        app:itemIconTint="@color/colorPrimary"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/activity_home_navigation_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>
